<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:weightSum="4"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/grey">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/et_id"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp"
            android:hint="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/et_lat"
            android:layout_margin="5dp"
            android:hint="@string/lat"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/et_lon"
            android:layout_margin="5dp"
            android:hint="@string/lon"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/et_des"
            android:layout_margin="5dp"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/insert"
                    android:layout_margin="10dp"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/btn_upd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update"
                    android:layout_margin="10dp"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:layout_margin="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_query"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/query"
                    android:layout_margin="10dp"
                    android:textSize="15sp"/>
                <Button
                    android:id="@+id/btn_qga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/QGA"
                    android:layout_margin="10dp"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
                <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:gravity="center"/>
            </LinearLayout>

    </LinearLayout>

 </LinearLayout>
